--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,21 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+
+  # FIREBASE PACKAGES
+  firebase_core: ^3.9.0
+  firebase_auth: ^5.3.4
+  cloud_firestore: ^5.6.0
+
+  # DEPENDANCY INJECTION PACKAGES
+  provider: ^6.1.2
+  injectable: ^2.4.1
+  freezed_annotation: ^2.4.1
+  get_it: ^8.0.3
+  dartz: ^0.10.1
+  equatable: ^2.0.5
+   
+
   cupertino_icons: ^1.0.8
   gap: ^3.0.1
   shared_preferences: ^2.5.1
@@ -40,6 +55,7 @@ dependencies:
   animated_rating_stars: ^1.0.0
   cached_network_image: ^3.4.1
   carousel_slider: ^5.0.0
+  flutter_staggered_grid_view: ^0.7.0
 
 
 dev_dependencies:
@@ -52,6 +68,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.9
+  freezed: ^2.5.2
+  injectable_generator: ^2.6.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
